# mail-triage

./: README.md
.github/workflows/: ci.yml
api/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
api/alembic/: env.py
api/alembic/versions/: 75d76371f368_create_user_table.py  841b7ade5a89_create_email_analysis_table.py
api/src/: app.py
api/src/config/: auth_config.py  logs.py  settings.py
api/src/models/: email_analysis.py  enums.py  user.py
api/src/routes/: analytics.py  auth.py  email.py  logout.py  root.py
api/src/schemas/: auth.py  email.py
api/src/services/: ai_service.py  auth_service.py  email_analysis_service.py  jwt_service.py
api/src/utils/: auth.py  database.py  get_file_content.py  preprocess_text.py  prompt_formatter.py
api/tests/: conftest.py  test_endpoints.py  test_file_processing.py  test_preprocessing.py  test_validation.py
web/: .env.example  .gitignore  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  routes.tsx
web/src/@types/: Analytics.d.ts  Auth.d.ts  EmailAnalysisResponse.d.ts
web/src/app/: AppLayout.tsx  Dashboard.tsx  Home.tsx  Login.tsx
web/src/app/layouts/: AppLayout.tsx  ProtectedLayout.tsx
web/src/components/auth/: GoogleLoginButton.tsx
web/src/components/dashboard/: AnalysisDetailModal.tsx  DistributionChart.tsx  RecentTable.tsx  StatsCard.tsx
web/src/components/home/: EmailAnalysis.tsx  FileInput.tsx  UploadEmailForm.tsx
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Header.tsx  Loading.tsx  MobileSidebar.tsx
web/src/contexts/: AuthContext.tsx
web/src/lib/: axios.ts
web/src/services/: AnalyticsService.ts  AuthService.ts  EmailService.ts
web/src/styles/: design-tokens.ts
web/src/utils/: format-file-size-util.ts
