[project]
name = "mail-triage-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "google-genai>=1.39.1",
    "logging>=0.4.9.6",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pypdf>=5.1.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
